# TestRepo

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  libtool
libdevicelist/: Makefile.am  device_list.c  device_list.h
libdeviceproperties/: Makefile.am  device_properties.c  device_properties.h
libdiscoverandroid/: Makefile.am  discover_android.c  discover_android.h  discover_android_threads.c  discover_android_threads.h
libdiscoverios/: Makefile.am  discover_ios.c  discover_ios.h  discover_ios_threads.c  discover_ios_threads.h
libgentestconfig/: Makefile.am  gen_test_config.c  gen_test_config.h
prepare-env/: Makefile.am  main.c
testApp/: Makefile.am  main.c
