#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libdevicelist.la

#######################################
# Build information for each library

# Sources for libdevicelist
libdevicelist_la_SOURCES = device_list.c

# Linker options libTestProgram
libdevicelist_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libdevicelist_la_CPPFLAGS = -I${top_srcdir}/libdevicelist

